--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <!-- Coding By AzadCoder - ig: @azadcoderr -->
 
        <footer>
-        <a href="http://instagram.com/kodlama.dili" target="_blank" rel="noopener noreferrer" title="kodlama.dili"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="http://instagram.com/kalipsotr" target="_blank" rel="noopener noreferrer" title="kalipsotr"><i class="fab fa-instagram"></i> Instagram</a>
     </footer>
 </body> 
 <script src="script.js"></script>
