--- a/payments.html
+++ b/payments.html
@@ -15,7 +15,7 @@
             <p>Para Birimi: TL</p>
             <p>Hesap No: 0364637</p>
             <p>Şube: Düzce - 83</p>
-            <p>TR89 0004 6000 8388 8000 3646 37</p>
+            <p>Devre Dışı</p>
           
           
 <button class="Btn">
