--- a/payments.html
+++ b/payments.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card akbank">
-        <img src="https://i.hizliresim.com/md27dug.png" alt="Akbank Logo" class="logo">
+        <img src="https://i.hizliresim.com/64peltt.png" alt="Akbank Logo" class="logo">
         <p><strong>ENES KOCA</strong></p>
         <p>Para Birimi: TL</p>
         <p>Hesap No: 0364637</p>
@@ -17,7 +17,7 @@
         <button onclick="copyToClipboard('akbankIban')">KOPYALA</button>
     </div>
     <div class="card denizbank">
-        <img src="https://i.hizliresim.com/hyhqkti.png" alt="Denizbank Logo" class="logo">
+        <img src="https://i.hizliresim.com/sbaxlo6.png" alt="Denizbank Logo" class="logo">
         <p><strong>ENES KOCA</strong></p>
         <p>Para Birimi: TL</p>
         <p>Hesap No: 93465894</p>
@@ -26,7 +26,7 @@
         <button onclick="copyToClipboard('denizbankIban')">KOPYALA</button>
     </div>
     <div class="card enpara">
-        <img src="https://i.hizliresim.com/hva2hn1.png" alt="Enpara Logo" class="logo">
+        <img src="https://i.hizliresim.com/6h7pjq3.png" alt="Enpara Logo" class="logo">
         <p><strong>ENES KOCA</strong></p>
         <p>Para Birimi: TL</p>
         <p>Hesap No: 93465894</p>
@@ -35,7 +35,7 @@
         <button onclick="copyToClipboard('enparaIban')">KOPYALA</button>
     </div>
     <div class="card garanti">
-        <img src="https://i.hizliresim.com/68mh1oj.png" alt="Garanti Bankası Logo" class="logo">
+        <img src="https://i.hizliresim.com/nbfl7tt.png" alt="Garanti Bankası Logo" class="logo">
         <p><strong>ENES KOCA</strong></p>
         <p>Para Birimi: TL</p>
         <p>Hesap No: 93465894</p>
@@ -44,7 +44,7 @@
         <button onclick="copyToClipboard('garantiIban')">KOPYALA</button>
     </div>
     <div class="card papara">
-        <img src="https://i.hizliresim.com/q58q1nr.png" alt="Papara Logo" class="logo">
+        <img src="https://i.hizliresim.com/2dahg6a.png" alt="Papara Logo" class="logo">
         <p><strong>ENES KOCA</strong></p>
         <p>Para Birimi: TL</p>
         <p>Hesap No: 5477334740</p>
@@ -53,7 +53,7 @@
         <button onclick="copyToClipboard('paparaIban')">KOPYALA</button>
     </div>
     <div class="card ziraat">
-        <img src="https://i.hizliresim.com/d3qf1ik.png" alt="Ziraat Bankası Logo" class="logo">
+        <img src="https://i.hizliresim.com/5t1m0pt.png" alt="Ziraat Bankası Logo" class="logo">
         <p><strong>ENES KOCA</strong></p>
         <p>Para Birimi: TL</p>
         <p>Hesap No: 93465894</p>
