--- a/payments.html
+++ b/payments.html
@@ -14,7 +14,7 @@
         <p>Para Birimi: TL</p>
         <p>Hesap No: 0364637</p>
         <p>Şube: Düzce - 83</p>
-        <p>IBAN: <span id="akbankIban">TR89 0004 6000 8388 8000 3646 37</span></p>
+        <p>IBAN: <span id="akbankIban">Geçersiz</span></p>
         <button onclick="copyToClipboard('akbankIban')">KOPYALA</button>
     </div>
     <div class="card denizbank">
