--- a/payments.html
+++ b/payments.html
@@ -50,7 +50,7 @@
         <p>Para Birimi: TL</p>
         <p>Hesap No: 93465894</p>
         <p>Şube: Düzce/Merkez - 81000</p>
-        <p>IBAN: <span id="ziraatIban">TR84 0001 0090 1004 3081 4050 01</span></p>
+        <p>IBAN: <span id="ziraatIban">Geçersiz</span></p>
         <button onclick="copyToClipboard('ziraatIban')">KOPYALA</button>
     </div>
       <div class="card papara">
