--- a/payments.html
+++ b/payments.html
@@ -261,12 +261,9 @@
             <h2 class="bank-name" style="background-image: linear-gradient(45deg, #e01b22, #ff6b6b);">Akbank</h2>
             <div class="info">
                 <p><strong>ENES KOCA</strong></p>
-                <p>Para Birimi: TL</p>
-                <p>Hesap No: 0364637</p>
-                <p>Şube: Düzce - 83</p>
-                <p>IBAN: TR89 0004 6000 8388 8000 3646 37</p>
+                <p>Yakında...</p>
             </div>
-            <button class="copy-btn" style="background-color: #e01b22;" data-clipboard="TR89 0004 6000 8388 8000 3646 37">KOPYALA</button>
+            <button class="copy-btn" style="background-color: #e01b22;" data-clipboard="Lütfen başka banka seçin.">Geçersiz</button>
         </div>
 
         <div class="card">
@@ -274,12 +271,9 @@
             <h2 class="bank-name" style="background-image: linear-gradient(45deg, #004c91, #0077be);">Denizbank</h2>
             <div class="info">
                 <p><strong>ENES KOCA</strong></p>
-                <p>Para Birimi: TL</p>
-                <p>Hesap No: 93465894</p>
-                <p>Şube: Düzce/Merkez - 81000</p>
-                <p>IBAN: TR54 0013 4000 0223 9092 3000 01</p>
+                <p>Yakında...</p>
             </div>
-            <button class="copy-btn" style="background-color: #ce163a;" data-clipboard="TR54 0013 4000 0223 9092 3000 01">KOPYALA</button>
+            <button class="copy-btn" style="background-color: #ce163a;" data-clipboard="Lütfen başka banka seçin.">Geçersiz</button>
         </div>
 
         <div class="card">
@@ -300,12 +294,9 @@
             <h2 class="bank-name" style="background-image: linear-gradient(45deg, #146d07, #2ecc71);">Garanti Bank</h2>
             <div class="info">
                 <p><strong>ENES KOCA</strong></p>
-                <p>Para Birimi: TL</p>
-                <p>Hesap No: 93465894</p>
-                <p>Şube: GARANTİ - 3663</p>
-                <p>IBAN: TR21 0006 2000 5220 0006 6017 84</p>
+                <p>Yakında...</p>
             </div>
-            <button class="copy-btn" style="background-color: #146d07;" data-clipboard="TR21 0006 2000 5220 0006 6017 84">KOPYALA</button>
+            <button class="copy-btn" style="background-color: #146d07;" data-clipboard="Lütfen başka banka seçin.">Geçersiz</button>
         </div>
 
         <div class="card">
@@ -326,12 +317,9 @@
             <h2 class="bank-name" style="background-image: linear-gradient(45deg, #d30b11, #ff4757);">Ziraat Bank</h2>
             <div class="info">
                 <p><strong>ENES KOCA</strong></p>
-                <p>Para Birimi: TL</p>
-                <p>Hesap No: 93465894</p>
-                <p>Şube: Düzce/Merkez - 81000</p>
-                <p>IBAN: TR84 0001 0090 1004 3081 4050 01</p>
+                <p>Yakında...</p>
             </div>
-            <button class="copy-btn" style="background-color: #d30b11;" data-clipboard="TR84 0001 0090 1004 3081 4050 01">KOPYALA</button>
+            <button class="copy-btn" style="background-color: #d30b11;" data-clipboard="Lütfen başka banka seçin.">Geçersiz</button>
         </div>
     </div>
 
